--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -95,6 +95,7 @@
         }
       }
     }
+
     &.article__volunteer,
     &.article__work-experience {
       ul {
@@ -123,10 +124,17 @@
               justify-content: space-between;
               align-items: center;
 
-              h3::before {
-                margin-right: 0.5em;
-                display: inline-block;
-                content: "🌐";
+              h3 {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                img {
+                  margin-right: 0.5em;
+                  display: inline-block;
+                  width: 20px;
+                  height: 20px;
+                }
               }
             }
 
@@ -134,10 +142,16 @@
               display: flex;
               flex-direction: column;
 
-              h3::before {
-                margin-right: 0.5em;
-                display: inline-block;
-                content: "🧠";
+              h3 {
+                display: flex;
+                align-items: center;
+
+                img {
+                  margin-right: 0.5em;
+                  display: inline-block;
+                  width: 20px;
+                  height: 20px;
+                }
               }
             }
 
@@ -175,7 +189,8 @@
         }
       }
     }
-    &.article__volunteer{
+
+    &.article__volunteer {
       ul {
         li {
           &::before {
